--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@
             border-radius: 6px;
             border: 1px solid gray;
         }
+        #form input[type="checkbox"]{
+            width: 20px;
+            height: 20px;
+        }
 
         .button {
             border: none;
@@ -655,7 +659,7 @@
 
 
 
-                <amp-script width="300" height="100" script="hello-world">
+                <amp-script width="300" height="50" script="hello-world">
                     <div style="display: flex; justify-content: space-between;">
                         <div style="    display: flex;
                         align-items: center;">
@@ -868,15 +872,15 @@
                     <div class="content">
                         <div class="flex">
 
-                            <div class="flex" style="flex: 1;">
-                                <div style="width: 70px; margin: 20px;">
+                            <div class="flex" style="">
+                                <div style="width: 70px; margin: 10px;">
                                     <amp-img src="./assest/pink1.webp" width="1" height="2" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
                                 <div>
                                     <h3 class="pink-txt">
                                         Lifestyle Insights
-                                    </h3><br />
+                                    </h3><br /><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -884,7 +888,7 @@
 
 
 
-                            <div style="flex: 1;">
+                            <div style="">
                                 <h3>Duration 0 : 1 week</h3>
                                 <h4>
 
@@ -903,15 +907,15 @@
                     <div class="content">
                         <div class="flex">
 
-                            <div class="flex" style="flex: 1;">
-                                <div style="width: 75px; margin: 20px;">
+                            <div class="flex" style="">
+                                <div style="width: 75px; margin: 10px;">
                                     <amp-img src="./assest/pink2.webp" width="1" height="2" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
                                 <div>
                                     <h3 class="pink-txt">
                                         A Fruitful Commitment
-                                    </h3><br />
+                                    </h3><br /><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -919,7 +923,7 @@
 
 
 
-                            <div style="flex: 1;">
+                            <div style="">
                                 <h3>Duration 3 : 6 weeks</h3>
                                 <h4>
 
@@ -938,8 +942,8 @@
                     <div class="content">
                         <div class="flex">
 
-                            <div class="flex" style="flex: 1;">
-                                <div style="width: 75px; margin: 20px;">
+                            <div class="flex" style="">
+                                <div style="width: 75px; margin: 10px;">
                                     <amp-img src="./assest/pink3.webp" width="1" height="2" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
@@ -947,7 +951,7 @@
                                     <h3 class="pink-txt">
                                         Accelerated Recovery
 
-                                    </h3><br />
+                                    </h3><br /><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -955,12 +959,12 @@
 
 
 
-                            <div style="flex: 1;">
+                            <div style="">
                                 <h3>Duration 8 : 12 weeks</h3>
                                 <h4>
 
 
-                                    Provides an extensive treatment plan to help control your diabetes.
+                                    Provides an extensive treatment plan to help control your <br/> diabetes.
 
 
                                 </h4>
@@ -979,8 +983,8 @@
                     <div class="content">
                         <div class="flex">
 
-                            <div class="flex" style="flex: 1;">
-                                <div style="width: 75px; margin: 20px;">
+                            <div class="flex" style="">
+                                <div style="width: 90px; margin: 10px;">
                                     <amp-img src="./assest/pink4.webp" width="1" height="2" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
@@ -988,7 +992,7 @@
                                     <h3 class="pink-txt">
                                         Charting A Better Life
 
-                                    </h3><br />
+                                    </h3><br /><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -996,13 +1000,13 @@
 
 
 
-                            <div style="flex: 1;">
+                            <div style="">
                                 <h3>Duration 3 : 8 weeks</h3>
                                 <h4>
 
 
 
-                                    Here, you will focus on muscle building and strengthening.</h4>
+                                    Here, you will focus on muscle building and  <br/>strengthening.</h4>
                                 <br />
                                 <h4>
 
@@ -1018,8 +1022,8 @@
                     <div class="content">
                         <div class="flex">
 
-                            <div class="flex" style="flex: 1;">
-                                <div style="width: 50px; margin: 20px;">
+                            <div class="flex" style="">
+                                <div style="width: 70px; margin: 10px;">
                                     <amp-img src="./assest/pink5.webp" width="1" height="2" layout="responsive" alt="">
                                     </amp-img>
                                 </div>
@@ -1027,7 +1031,7 @@
                                     <h3 class="pink-txt">
                                         Keeping It Going
 
-                                    </h3><br />
+                                    </h3><br /><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -1035,7 +1039,7 @@
 
 
 
-                            <div style="flex: 1;">
+                            <div style="">
                                 <h3>Duration 6 : 8 weeks</h3>
                                 <h4>
 
