--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                                 <h4>
 
 
-                                    Provides an extensive treatment plan to help control your <br/> diabetes.
+                                    Provides an extensive <br/> treatment plan to help control your  diabetes.
 
 
                                 </h4>
@@ -1006,7 +1006,7 @@
 
 
 
-                                    Here, you will focus on muscle building and  <br/>strengthening.</h4>
+                                    Here, you will focus<br/> on muscle building and  strengthening.</h4>
                                 <br />
                                 <h4>
 
