--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 
         .content {
             margin: 20px 0px;
-            padding: 10px 0px;
+            padding: 5px ;
             background-color: white;
             position: relative;
             border-radius: 6px;
@@ -880,7 +880,7 @@
                                 <div>
                                     <h3 class="pink-txt">
                                         Lifestyle Insights
-                                    </h3><br /><br />
+                                    </h3><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -892,7 +892,7 @@
                                 <h3>Duration 0 : 1 week</h3>
                                 <h4>
 
-                                    We will begin the programme by getting to know you, your lifestyle, and your eating
+                                    We will begin the programme  by getting to know you, your lifestyle, and your eating
                                     habits.</h4>
                                 <br />
                                 <h4>
@@ -915,7 +915,7 @@
                                 <div>
                                     <h3 class="pink-txt">
                                         A Fruitful Commitment
-                                    </h3><br /><br />
+                                    </h3><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -928,7 +928,7 @@
                                 <h4>
 
 
-                                    We will help you replace your harmful lifestyle habits with healthy ones..</h4>
+                                    We will help you replace your harmful lifestyle habits  with healthy ones..</h4>
                                 <br />
                                 <h4>
                                     From weight reduction to energized physique, your body starts to enjoy a positive
@@ -951,7 +951,7 @@
                                     <h3 class="pink-txt">
                                         Accelerated Recovery
 
-                                    </h3><br /><br />
+                                    </h3><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -964,7 +964,7 @@
                                 <h4>
 
 
-                                    Provides an extensive <br/> treatment plan to help control your  diabetes.
+                                    Provides an extensive <br/> treatment plan to help<br/> control your  diabetes.
 
 
                                 </h4>
@@ -992,7 +992,7 @@
                                     <h3 class="pink-txt">
                                         Charting A Better Life
 
-                                    </h3><br /><br />
+                                    </h3><br />
                                     <h3 class="pink-txt">Outcome</h3>
                                 </div>
 
@@ -1006,7 +1006,7 @@
 
 
 
-                                    Here, you will focus<br/> on muscle building and  strengthening.</h4>
+                                    Here, you will focus<br/> on muscle building<br/> and  strengthening.</h4>
                                 <br />
                                 <h4>
 
