--- a/index.html
+++ b/index.html
@@ -548,6 +548,17 @@
             border-radius: 18px;
             box-shadow: 0 0 0 3px rgba(233, 33, 99, 0.3);
         }
+        @media screen and (max-width:400px) {
+            .timeline ul li:nth-child(odd) .time {
+            position: relative;
+            top: -140px;
+            padding: 5px;
+            right: -175px;
+        }
+        .timeline ul li {
+            width: 45%;
+        }
+        }
     </style>
 
 </head>
