--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
 
             <div>
                 <div id="map-img-wrapper">
-                    <amp-img src="./Rectangle 33.svg" width="1.5" height="1" layout="responsive" alt="logo">
+                    <amp-img src="./assest/map.svg" width="1.5" height="1" layout="responsive" alt="logo">
                     </amp-img>
 
                 </div>
@@ -1476,11 +1476,11 @@
 
                         <p style="text-align: end;">Top endocrinologists and <br /> Diabetologists</p>
                         <div>
-                            <amp-img src="./assest/Tick Box.webp" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Box Important.webp" width="1.5" height="1.3" layout="responsive"
+                            <amp-img src="./assest/Box Important.svg" width="1.5" height="1.3" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -1491,11 +1491,11 @@
 
                         <p style="text-align: end;">Personalized & Sustainable <br /> Diabetes control program</p>
                         <div>
-                            <amp-img src="./assest/Tick Box.webp" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Close Window.webp" width="1" height="1" layout="responsive"
+                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -1507,11 +1507,11 @@
 
                         <p style="text-align: end;">Smart & remote monitoring by <br />OneCare mobile app</p>
                         <div>
-                            <amp-img src="./assest/Tick Box.webp" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Close Window.webp" width="1" height="1" layout="responsive"
+                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -1523,11 +1523,11 @@
 
                         <p style="text-align: end;">24*7 access to expert dietician</p>
                         <div>
-                            <amp-img src="./assest/Tick Box.webp" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Close Window.webp" width="1" height="1" layout="responsive"
+                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -1539,11 +1539,11 @@
 
                         <p style="text-align: end;">Dedicated coach with free <br />Weekly Sessions</p>
                         <div>
-                            <amp-img src="./assest/Tick Box.webp" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Close Window.webp" width="1" height="1" layout="responsive"
+                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -1555,11 +1555,11 @@
 
                         <p style="text-align: end;">Free unlimited doctor <br /> Follow-ups</p>
                         <div>
-                            <amp-img src="./assest/Tick Box.webp" width="1" height="1" layout="responsive" alt="logo">
+                            <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
                         </div>
                         <div>
-                            <amp-img src="./assest/Close Window.webp" width="1" height="1" layout="responsive"
+                            <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive"
                                 alt="logo">
                             </amp-img>
                         </div>
@@ -1568,15 +1568,15 @@
 
                         <p style="text-align: end;">
                             Focus on controlling & <br />Reversing Diabetes</p>
-                        <div>
-                            <amp-img src="./assest/Tick Box.webp" width="1" height="1" layout="responsive" alt="logo">
-                            </amp-img>
-                        </div>
-                        <div>
-                            <amp-img src="./assest/Close Window.webp" width="1" height="1" layout="responsive"
-                                alt="logo">
-                            </amp-img>
-                        </div>
+                            <div>
+                                <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
+                                </amp-img>
+                            </div>
+                            <div>
+                                <amp-img src="./assest/Xbox X.svg" width="1.5" height="1.3" layout="responsive"
+                                    alt="logo">
+                                </amp-img>
+                            </div>
                     </div>
 
 
