--- a/index.html
+++ b/index.html
@@ -1507,7 +1507,7 @@
                     </div>
                     <div class="flex tick-wrapper">
 
-                        <p style="text-align: end;">Top endocrinologists and <br /> Diabetologists</p>
+                        <p class="f-s-14 f-w-400" style="text-align: end;">Top endocrinologists and <br /> Diabetologists</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1522,7 +1522,7 @@
 
                     <div class="flex tick-wrapper">
 
-                        <p style="text-align: end;">Personalized & Sustainable <br /> Diabetes control program</p>
+                        <p class="f-s-14 f-w-400"  style="text-align: end;">Personalized & Sustainable <br /> Diabetes control program</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1538,7 +1538,7 @@
 
                     <div class="flex tick-wrapper">
 
-                        <p style="text-align: end;">Smart & remote monitoring by <br />OneCare mobile app</p>
+                        <p class="f-s-14 f-w-400" style="text-align: end;">Smart & remote monitoring by <br />OneCare mobile app</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1554,7 +1554,7 @@
 
                     <div class="flex tick-wrapper">
 
-                        <p style="text-align: end;">24*7 access to expert dietician</p>
+                        <p class="f-s-14 f-w-400" style="text-align: end;">24*7 access to expert dietician</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1570,7 +1570,7 @@
 
                     <div class="flex tick-wrapper">
 
-                        <p style="text-align: end;">Dedicated coach with free <br />Weekly Sessions</p>
+                        <p class="f-s-14 f-w-400" style="text-align: end;">Dedicated coach with free <br />Weekly Sessions</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1586,7 +1586,7 @@
 
                     <div class="flex tick-wrapper">
 
-                        <p style="text-align: end;">Free unlimited doctor <br /> Follow-ups</p>
+                        <p class="f-s-14 f-w-400" style="text-align: end;">Free unlimited doctor <br /> Follow-ups</p>
                         <div>
                             <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
                             </amp-img>
@@ -1599,7 +1599,7 @@
                     </div>
                     <div class="flex tick-wrapper">
 
-                        <p style="text-align: end;">
+                        <p class="f-s-14 f-w-400" style="text-align: end;">
                             Focus on controlling & <br />Reversing Diabetes</p>
                             <div>
                                 <amp-img src="./assest/Ok.svg" width="1" height="1" layout="responsive" alt="logo">
