--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
         <section id="top">
 
             <div>
-                <amp-base-carousel id="carouselID" height="500" layout="fixed-height" visible-count="1"
+                <amp-base-carousel auto-advance="true" auto-advance-interval="1000" id="carouselID" height="500" layout="fixed-height" visible-count="1"
                     advance-count="1" controls="never"
                     on="slideChange: SelectorID.toggle(index=event.index, value=true)">
                     <div class="slide-wrapper">
