--- a/index.html
+++ b/index.html
@@ -1499,9 +1499,9 @@
 
 
                     <div id="tick-head">
-                        <p class="blu-txt">OneCare Smart<br />
+                        <p class=" f-s-12 f-s-700 blu-txt">OneCare Smart<br />
                             Diabetes Clinics</p>
-                        <p class="drk-blu-txt">Other
+                        <p class=" f-s-12 f-s-700  drk-blu-txt">Other
                             <br /> Clinics
                         </p>
                     </div>
