--- a/index.html
+++ b/index.html
@@ -223,8 +223,12 @@
             margin: 10px 0px;
         }
 
+        footer{
+            background-color: white;
+        }
         header {
             width: 100%;
+            background-color: white;
             box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
         }
 
@@ -1840,6 +1844,44 @@
 
         </section>
 
+
+
+        <section>
+            <h3 class="f-s-18 f-w-700 ">In the news</h3>
+            <div class="flex">
+
+                <div>
+<amp-img style="width: 80px; margin-right: 10px;" src="./assest/vccircle.svg"
+  width="1"
+  height="1"
+  layout="responsive"
+  alt="logo">
+</amp-img>
+                </div>
+                <div>
+                    <amp-img style="width: 110px;  margin-right: 10px;" src="./assest/logo_yourstory 1.svg"
+                      width="1"
+                      height="1"
+                      layout="responsive"
+                      alt="logo">
+                    </amp-img>
+                                    </div>         <div>
+                                        <amp-img style="width: 100px;" src="./assest/EH-Logo-white 1.svg"
+                                          width="1"
+                                          height="1"
+                                          layout="responsive"
+                                          alt="logo">
+                                        </amp-img>
+                                                        </div>         <div>
+                                                            <amp-img style="width: 100px;" src="./assest/IndianStartupNews-logo 1.svg"
+                                                              width="1"
+                                                              height="1"
+                                                              layout="responsive"
+                                                              alt="logo">
+                                                            </amp-img>
+                                                                            </div>
+            </div>
+        </section>
         <footer>
             <nav>
                 <div class="logo-wrapper">
@@ -1855,7 +1897,7 @@
                 </div>
             </nav>
         </footer>
-        <div style="background-color: white; padding: 10px; height: 120px;">
+        <div style=" padding: 10px; height: 150px;">
             <h4 class="center-txt f-s-14 f-w-400">
                 © 2021, OneCare. All Rights Reserved
             </h4>
