--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@
             background-color: white;
             display: flex;
             padding: 10px 20px;
+            justify-content: space-between;
             align-items: center;
         }
 
