--- a/index.html
+++ b/index.html
@@ -1883,22 +1883,22 @@
             <div class="flex">
 
                 <div>
-                    <amp-img style="width: 80px; margin-right: 10px;" src="./assest/vccircle.svg" width="1" height="1"
+                    <amp-img style="width: 80px;  height:35px;margin-right: 10px;" src="./assest/vccircle.svg" width="1" height="1"
                         layout="responsive" alt="logo">
                     </amp-img>
                 </div>
                 <div>
-                    <amp-img style="width: 110px;  margin-right: 10px;" src="./assest/logo_yourstory 1.svg" width="1"
+                    <amp-img style="width: 110px; height:35px;  margin-right: 10px;" src="./assest/logo_yourstory 1.svg" width="1"
                         height="1" layout="responsive" alt="logo">
                     </amp-img>
                 </div>
                 <div>
-                    <amp-img style="width: 100px;" src="./assest/EH-Logo-white 1.svg" width="1" height="1"
+                    <amp-img style="width: 100px;height:35px;"  src="./assest/EH-Logo-white 1.svg" width="1" height="1"
                         layout="responsive" alt="logo">
                     </amp-img>
                 </div>
                 <div>
-                    <amp-img style="width: 100px;" src="./assest/IndianStartupNews-logo 1.svg" width="1" height="1"
+                    <amp-img style="width: 100px; height:65px;" src="./assest/IndianStartupNews-logo 1.svg" width="1" height="1"
                         layout="responsive" alt="logo">
                     </amp-img>
                 </div>
