--- a/index.html
+++ b/index.html
@@ -1860,9 +1860,14 @@
                     </span>
                 </div> 
 
+             
             </div>
 
-
+            <div style="text-align: center; padding: 10px 20px;" class="button blue-bg ">VIEW ALL  <span style=" margin-left: 5px; border: solid white;
+                border-width: 0 3px 3px 0;
+                display: inline-block;
+                padding: 3px; transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);"></span></div>
 
 
 
@@ -1878,7 +1883,7 @@
 
 
 
-        <section>
+        <section style="background-color: white;">
             <h3 class="f-s-18 f-w-700 ">In the news</h3>
             <div class="flex">
 
@@ -1902,6 +1907,17 @@
                         layout="responsive" alt="logo">
                     </amp-img>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div>
+<h3 class="f-s-18 f-w-700">
+    Popular searches:
+    <span class="gray-txt f-s-14 f-w-500">
+        Diabetes, diabetes care, best endocrinologist, top diabetes clinic, diabetologist near me, best diabetic doctors in bangalore, diabetes clinic near me, diabetes hospital near me, diabetes specialist, Diabetes treatment, diabetes control, type 2 diabetes, diabetes symptoms,
+             </span>
+</h3>
+              
             </div>
         </section>
         <footer>
