--- a/index.html
+++ b/index.html
@@ -630,13 +630,14 @@
             background-color: white;
             display: flex;
             padding: 10px 20px;
-            justify-content: space-between;
+            justify-content: center;
             align-items: center;
         }
 
         a {
             text-decoration: none;
             cursor: pointer;
+            color: white;
         }
     </style>
 
@@ -678,7 +679,7 @@
                     <div class="slide-wrapper">
                         <div class="slide">
                             <div>
-                                <h1 class="f-w-700 f-s-30">Anup khees<br /> <span>Age-35 yrs</span> </h1>
+                                <h1 class="f-w-700 f-s-30">Anup Khees<br /> <span>Age-35 yrs</span> </h1>
                                 <div class=" m-t-10 flex">
                                     <div class="flex" style="margin-right: 15px;
                                 ">
@@ -702,7 +703,7 @@
                                     half
                                     and<br /> I'm very sure that it will stop completely in some time. </p>
                                 <div class="blue-bg" style="padding: 10px 20px; border-radius: 6px;">
-                                    <a href="" class="f-s-i f-w-700 blue-bg center-txt">Book a Doctor Consultation</a>
+                                    <a href="#form-section" class="f-s-i f-w-700 blue-bg center-txt">Book a Doctor Consultation</a>
                                 </div>
                             </div>
                             <div style="width: 400px; position: relative; top: 170px; left:15%">
@@ -726,7 +727,7 @@
                                     care plan
                                     specific to your need. </p>
                                 <div class="blue-bg" style="padding: 10px 20px; border-radius: 6px;">
-                                    <a href="" class=" blue-bg  f-w-700 f-s-i center-txt">Book a Doctor Consultation</a>
+                                    <a href="#form-section" class=" blue-bg  f-w-700 f-s-i center-txt">Book a Doctor Consultation</a>
                                 </div>
                             </div>
                             <div style="    width: 437px;
@@ -751,7 +752,7 @@
                                     you.
                                 </p>
                                 <div class="blue-bg" style="padding: 10px 20px; border-radius: 6px;">
-                                    <a href="" class="  f-w-700 blue-bg f-s-i center-txt">Book a Doctor Consultation</a>
+                                    <a href="#form-section" class="  f-w-700 blue-bg f-s-i center-txt">Book a Doctor Consultation</a>
                                 </div>
                             </div>
                             <div style="  position: relative;  width: 315px;;
@@ -773,7 +774,7 @@
                                     Private video consultation
                                 </p>
                                 <div class="blue-bg" style="padding: 10px 20px; border-radius: 6px;">
-                                    <a href="" class="  f-w-700 blue-bg f-s-i center-txt">Book a Doctor Consultation</a>
+                                    <a href="#form-section" class="  f-w-700 blue-bg f-s-i center-txt">Book a Doctor Consultation</a>
                                 </div>
                             </div>
                             <div style="   position: relative; width: 315px;;
@@ -1425,7 +1426,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <h3 class="f-s-16 f-w-400">080 4680 8989</h3>
+                                <a href="#080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
                             </div>
                             <div class="flex m-t-10">
                                 <h3 style="margin: 0px 5px;" class="f-s-12">4.9</h3>
@@ -1449,7 +1450,7 @@
                             <p class="center-txt f-s-12 f-s-i f-w-700">GET DIRECTIONS</p>
                         </div>
                         <div>
-                            <p class="center-txt f-s-12 f-s-i f-w-700">Book a Consultation</p>
+                            <a href="#form-section" class="center-txt f-s-12 f-s-i f-w-700">Book a Consultation</a>
                         </div>
                     </div>
                 </div>
@@ -1479,7 +1480,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <h3 class="f-s-16 f-w-400">080 4680 8989</h3>
+                                <a href="tel:080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
                             </div>
                             <div class="flex  m-t-10">
                                 <h3 style="margin:0px 5px;" class="f-s-12">4.9</h3>
@@ -1503,7 +1504,7 @@
                             <p class=" f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</p>
                         </div>
                         <div>
-                            <p class=" f-s-12 f-s-i f-w-700 center-txt">Book a Consultation</p>
+                            <a href="#form-section" class=" f-s-12 f-s-i f-w-700 center-txt">Book a Consultation</a>
                         </div>
                     </div>
                 </div>
@@ -1532,7 +1533,7 @@
                                         alt="logo">
                                     </amp-img>
                                 </div>
-                                <h3 class="f-s-16 f-w-400">080 4680 8989</h3>
+                                <a href="tel:080 4680 8989" class="f-s-16 f-w-400">080 4680 8989</a>
                             </div>
                             <div class="flex  m-t-10">
                                 <h3 style="margin:0px  5px; " class="f-s-12">4.9</h3>
@@ -1556,7 +1557,7 @@
                             <p class=" f-s-12 f-s-i f-w-700 center-txt">GET DIRECTIONS</p>
                         </div>
                         <div>
-                            <p class=" f-s-12 f-s-i f-w-700 center-txt">Book a Consultation</p>
+                            <a href="#form-section" class=" f-s-12 f-s-i f-w-700 center-txt">Book a Consultation</a>
                         </div>
                     </div>
                 </div>
@@ -1738,7 +1739,32 @@
 
 
         </section>
+        <section style="background-color: white;">
+            <h3 class="f-s-18 f-w-700 ">In the news</h3>
+            <div class="flex">
 
+                <div>
+                    <amp-img style="width: 80px;  height:35px;margin-right: 10px;" src="./assest/vccircle.svg" width="1" height="1"
+                        layout="responsive" alt="logo">
+                    </amp-img>
+                </div>
+                <div>
+                    <amp-img style="width: 110px; height:35px;  margin-right: 10px;" src="./assest/logo_yourstory 1.svg" width="1"
+                        height="1" layout="responsive" alt="logo">
+                    </amp-img>
+                </div>
+                <div>
+                    <amp-img style="width: 100px;height:35px;"  src="./assest/EH-Logo-white 1.svg" width="1" height="1"
+                        layout="responsive" alt="logo">
+                    </amp-img>
+                </div>
+                <div>
+                    <amp-img style="width: 100px; height:65px;" src="./assest/IndianStartupNews-logo 1.svg" width="1" height="1"
+                        layout="responsive" alt="logo">
+                    </amp-img>
+                </div>
+            </div>
+        </section>
         <section id="FAQ">
             <h1 class="center-txt drk-blu-txt">FAQs</h1>
 
@@ -1883,32 +1909,7 @@
 
 
 
-        <section style="background-color: white;">
-            <h3 class="f-s-18 f-w-700 ">In the news</h3>
-            <div class="flex">
-
-                <div>
-                    <amp-img style="width: 80px;  height:35px;margin-right: 10px;" src="./assest/vccircle.svg" width="1" height="1"
-                        layout="responsive" alt="logo">
-                    </amp-img>
-                </div>
-                <div>
-                    <amp-img style="width: 110px; height:35px;  margin-right: 10px;" src="./assest/logo_yourstory 1.svg" width="1"
-                        height="1" layout="responsive" alt="logo">
-                    </amp-img>
-                </div>
-                <div>
-                    <amp-img style="width: 100px;height:35px;"  src="./assest/EH-Logo-white 1.svg" width="1" height="1"
-                        layout="responsive" alt="logo">
-                    </amp-img>
-                </div>
-                <div>
-                    <amp-img style="width: 100px; height:65px;" src="./assest/IndianStartupNews-logo 1.svg" width="1" height="1"
-                        layout="responsive" alt="logo">
-                    </amp-img>
-                </div>
-            </div>
-        </section>
+      
         <section>
             <div>
 <h3 class="f-s-18 f-w-700">
@@ -1955,8 +1956,8 @@ align-items: flex-end;">
 
 
             <div class="flex">
-                <p class="f-s-12 f-s-i f-w-500">Get Your 1st Private <br /> Consultation + Free Call </p>
-                <a href='' style="padding:15px" class=" blue-bg f-s-12 f-s-i f-w-500 button">Get Your 1st Consultation
+          
+                <a href='' style="padding:15px" class=" blue-bg f-s-16 f-s-i f-w-500 button">Get Your 1st Consultation
                     Free
                 </a>
             </div>
